--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@capacitor/android": "^3.2.3",
     "@capacitor/cli": "^3.2.3",
+    "@capacitor/core": "^3.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
